# app/Http/Controllers/Auth/PasswordResetLinkController.php
@@ -3,9 +3,13 @@
 namespace App\Http\Controllers\Auth;
 
 use App\Http\Controllers\Controller;
+use App\Mail\EmailTemplate;
 use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Mail;
 use Illuminate\Support\Facades\Password;
+use Illuminate\Support\Str;
 
 class PasswordResetLinkController extends Controller
 {
@@ -33,7 +37,7 @@ class PasswordResetLinkController extends Controller
      * path="/api/forgot-password",
      * summary="Forgot Password",
      * description="Forgot Password by email",
-     * operationId="store",
+     * operationId="storeNewPassword",
      * tags={"Admin"},
      * @OA\RequestBody(
      *    required=true,
@@ -52,7 +56,7 @@ class PasswordResetLinkController extends Controller
      *     )
      * )
      */
-    public function store(Request $request)
+    public function storeNewPassword(Request $request)
     {
         $request->validate([
             'email' => ['required', 'email'],
@@ -68,31 +72,48 @@ class PasswordResetLinkController extends Controller
             ]);
         }
 
-        // We will send the password reset link to this user. Once we have attempted
-        // to send the link, we will examine the response then see the message we
-        // need to show to the user. Finally, we'll send out a proper response.
-        $status = Password::sendResetLink(
-            $request->only('email')
-        );
+        $user = User::where('email', $request->email)->first();
 
-        if($status == Password::RESET_LINK_SENT ? back()->with('status', __($status))
-                    : back()->withInput($request->only('email'))
-                            ->withErrors(['email' => __($status)])){
+        $password = Str::random(10);
 
-            return response()->json([
-                'response_code' => 200,
-                'data' => [
-                    'message' => 'Email sent'
-                ]
-            ]);
+
+        $userPassword = Hash::make($password);
+
+        $data = User::where('email', $request->email)->update(["password"=>$userPassword]);
+
+        $details = ["title"=>"Forgot Password","body"=>"New Password: ".$password];
+        if($data){
+            Mail::to($request->email)->send(new EmailTemplate($details));
+
+            if (Mail::failures()) {
+                return response()->json([
+                    'response_code' => 422,
+                    'data' => [
+                        'message' => 'Email not sent'
+                    ]
+                ]);
+            }else{
+
+                return response()->json([
+                    'response_code' => 200,
+                    'data' => [
+                        'message' => 'Email sent'
+                    ],
+                    "Error"=>$request->all()
+                ]);
+
+            }
         }else{
 
             return response()->json([
-                'response_code' => 422,
+                'response_code' => 500,
                 'data' => [
-                    'message' => 'Email not sent'
-                ]
+                    'message' => 'Email not Updated'
+                ],
+                "Error"=>$request->all()
             ]);
         }
+
+
     }
 }
