# app/Http/Controllers/CustomerController.php
@@ -54,11 +54,10 @@ class CustomerController extends Controller
     public function userRegister(Request $request){
 
         $validator = Validator::make($request->all(), [
-            'name' => 'required|unique:customers',
-            'username' => 'required|unique:customers',
+            'name' => 'required',
             'password' => 'required',
             'email' => 'required|email|unique:customers',
-            'contact' => 'required|unique:customers',
+            'contact' => 'required',
         ]);
 
         if ($validator->fails()) {
@@ -71,6 +70,7 @@ class CustomerController extends Controller
         }
         $requestData = $request->all();
         $requestData['password'] = Hash::make($requestData['password']);
+        $requestData['username'] = microtime();
         customer::create($requestData);
         return response()->json(customer::all());
     }
@@ -90,7 +90,7 @@ class CustomerController extends Controller
      *             mediaType="multipart/form-data",
      *             @OA\Schema(
      *                  @OA\Property(
-     *                      property="username",
+     *                      property="email",
      *                      type="string"
      *                  ),
      *                  @OA\Property(
@@ -106,7 +106,7 @@ class CustomerController extends Controller
     public function userLogin(Request $request){
 
         $validator = Validator::make($request->all(), [
-            'username' => 'required',
+            'email' => 'required',
             'password' => 'required'
         ]);
 
@@ -119,18 +119,18 @@ class CustomerController extends Controller
             ], 422);
         }
 
-        if(customer::where('username',$request->username)->count() == 0){
+        if(customer::where('email',$request->email)->count() == 0){
             return response()->json([
                 'response_code' => 422,
                 'message' => 'The given data was invalid.',
-                'errors' => "Username invalid",
+                'errors' => "email invalid",
                 'data' => (object)[]
             ], 422);
         }
 
-        $customer = customer::where('username',$request->username)->first();
+        $customer = customer::where('email',$request->email)->first();
 
-        print_r(Hash::check($customer->password,$request->password));
+        // print_r(Hash::check($customer->password,$request->password));
 
         if(!Hash::check($request->password,$customer->password)){
             return response()->json([
@@ -151,52 +151,4 @@ class CustomerController extends Controller
         ], 200);
     }
 
-
-    /**
-     * @OA\Post(
-     *      path="/api/customer-subscribe",
-     *      summary="Customer Subscribe",
-     *      tags={"Customer"},
-     *      operationId="userSubscribe",
-     * @OA\Response(response=200,description="successful operation", @OA\JsonContent()),
-     * @OA\Response(response=406,description="not acceptable", @OA\JsonContent()),
-     * @OA\Response(response=500,description="internal server error", @OA\JsonContent()),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\MediaType(
-     *             mediaType="multipart/form-data",
-     *             @OA\Schema(
-     *                  @OA\Property(
-     *                      property="email",
-     *                      type="string"
-     *                  )
-     *             )
-     *         )
-     *     )
-     *)
-     *
-     */
-    public function userSubscribe(Request $request){
-
-        $validator = Validator::make($request->all(), [
-            'email' => 'required|email|unique:customers'
-        ]);
-        if ($validator->fails()) {
-            return response()->json([
-                'response_code' => 422,
-                'message' => 'The given data was invalid.',
-                'errors' => $validator->errors(),
-                'data' => (object)[]
-            ], 422);
-        }
-        $requestData = $request->all();
-        customer::create($requestData);
-        return response()->json([
-            'response_code' => 200,
-            'message' => 'Thank you for subscribe.',
-            'errors' => (object)[],
-            'data' => (object)[]
-        ], 200);
-
-    }
 }
