# app/Http/Controllers/SubscribeController.php
@@ -1,0 +1,155 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\Subscribe;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Validator;
+
+class SubscribeController extends Controller
+{
+    /**
+     * Display a listing of the resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function index()
+    {
+        //
+    }
+
+    /**
+     * Show the form for creating a new resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function create()
+    {
+        //
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     */
+
+
+    /**
+     * @OA\Post(
+     *      path="/api/add-customer-subscribe",
+     *      summary="Add Customer Subscribe",
+     *      tags={"Customer"},
+     *      operationId="storeSubscribe",
+     * @OA\Response(response=200,description="successful operation", @OA\JsonContent()),
+     * @OA\Response(response=406,description="not acceptable", @OA\JsonContent()),
+     * @OA\Response(response=500,description="internal server error", @OA\JsonContent()),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                  @OA\Property(
+     *                      property="email",
+     *                      type="string"
+     *                  )
+     *             )
+     *         )
+     *     )
+     *)
+     *
+     */
+    public function storeSubscribe(Request $request)
+    {
+        //
+
+        $validator = Validator::make($request->all(), [
+            'email' => 'required|email|unique:subscribes',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json([
+                'response_code' => 422,
+                'message' => 'The given data was invalid.',
+                'errors' => $validator->errors(),
+                'data' => (object)[]
+            ], 422);
+        }
+
+        Subscribe::create($request->all());
+
+        return response()->json([
+            'response_code' => 200,
+            'message' => "Thank you for subscribe!",
+            'errors' => (object)[],
+            'data' => (object)[]
+        ], 200);
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  \App\Models\Subscribe  $subscribe
+     * @return \Illuminate\Http\Response
+     */
+
+
+    /**
+     * @OA\Get(
+     *      path="/api/view-customer-subscribe",
+     *      summary="View Customer Subscribe",
+     *      tags={"Customer"},
+     *      operationId="Add Customer Subscribe",
+     * @OA\Response(response=200,description="successful operation", @OA\JsonContent()),
+     * @OA\Response(response=406,description="not acceptable", @OA\JsonContent()),
+     * @OA\Response(response=500,description="internal server error", @OA\JsonContent())
+     *)
+     *
+    **/
+    public function showSubscribe(Subscribe $subscribe)
+    {
+        //
+
+        return response()->json([
+            'response_code' => 200,
+            'message' => "Subscribes",
+            'errors' => (object)[],
+            'data' => $subscribe->all()
+        ], 200);
+    }
+
+    /**
+     * Show the form for editing the specified resource.
+     *
+     * @param  \App\Models\Subscribe  $subscribe
+     * @return \Illuminate\Http\Response
+     */
+    public function edit(Subscribe $subscribe)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  \App\Models\Subscribe  $subscribe
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, Subscribe $subscribe)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  \App\Models\Subscribe  $subscribe
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy(Subscribe $subscribe)
+    {
+        //
+    }
+}
