# app/Models/Cart.php
@@ -8,4 +8,18 @@ use Illuminate\Database\Eloquent\Model;
 class Cart extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'customer',
+        'product',
+        'qty'
+    ];
+
+    public function getProductAttribute($val){
+        return Product::where('id',$val)->first();
+    }
+
+    public function getCustomerAttribute($val){
+        return customer::where('id',$val)->first();
+    }
 }
